# awsx

./: Cargo.toml  lcov.info
src/: cmd.rs  lib.rs  main.rs  substitute.rs
src/bucket/: cli.rs  mod.rs  options.rs
src/config/: error.rs  getters.rs  init.rs  mod.rs  options.rs  setters.rs  tests.rs  verify_path.rs
src/config/tomlfile/: getters.rs  init.rs  mod.rs  traits.rs
src/config2/: getters.rs  init.rs  mod.rs  tests.rs
src/config2/tomlfile/: init.rs  mod.rs  parse.rs  traits.rs
src/config_old/: error.rs  getters.rs  init.rs  mod.rs  options.rs  setters.rs
src/ec2/: cli.rs  options.rs
src/env/: cli.rs  mod.rs  options.rs
src/lambda/: cli.rs  options.rs
src/route53/: cli.rs  options.rs
src/secrets/: cli.rs  core.rs  mod.rs  options.rs
src/stack/: cli.rs  mod.rs  options.rs  util.rs
tests/: mod.rs  tools.rs
tests/cmd/: mod.rs
tests/config/: mod.rs  options.rs
tests/fixtures/: invalid_cf.yml  template.yml
tests/fixtures/config/: invalid.toml  secret_empty.toml  secret_folder.toml  secret_invalid.toml  secret_non_existent.toml  secret_with_secret.toml  self_referencing.toml  wrong_parameters_type.toml  wrong_secrets_type.toml
tests/fixtures/config/example_1/: config.toml
tests/fixtures/config/example_1/main/: config.toml  template.yml
tests/fixtures/config/example_2/: config.toml
tests/fixtures/config/nested/: config.toml
tests/fixtures/config_1/: config.toml  template.yml
tests/fixtures/nested_configs/: config.toml
tests/fixtures/nested_configs/sub/: config.toml
tests/stack/: mod.rs
(+1 files in other folders)
